Fix:		Raise ValidationError if padding-auto is selcted in Spacing plugin

--- a/private/sass/components/_tabs.scss
+++ b/private/sass/components/_tabs.scss
@@ -17,7 +17,7 @@ ul.nav {
                 display: block;
             }
             padding: .5rem;
-            border: 1px solid var(--dca-black, $white);
+            border: 1px solid var(--dca-white, $white);
             transform: translate(-50%, -50%);
             top: 0;
             left: 100%;
